# edgedb

./: pyproject.toml
.github/workflows/: mayhem.yml
docs/intro/: projects.rst
docs/reference/: projects.rst
edb/edgeql-parser/fuzz/: Cargo.toml
edb/edgeql-parser/fuzz/fuzz_targets/: check.rs
edb/server/: main.py  server.py
mayhem/: Dockerfile  check.mayhemfile
